[gd_scene load_steps=4 format=3 uid="uid://cft3d6nbppw55"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_dasgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3ki5"]
bg_color = Color(1, 0.34902, 0.478431, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="LabelSettings" id="LabelSettings_s7h8d"]
font_size = 11

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 2.0
offset_right = 31.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dasgm")
metadata/_edit_vertical_guides_ = [20.0]

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 574.0
offset_bottom = 37.0
theme_override_styles/fill = SubResource("StyleBoxFlat_i3ki5")
rounded = true
show_percentage = false

[node name="ScrapCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 194.0
offset_right = 187.0
offset_bottom = 220.0
scale = Vector2(2.612, 1.672)
label_settings = SubResource("LabelSettings_s7h8d")

[node name="PowerupAlert" type="Label" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 41.0
offset_right = 462.0
offset_bottom = 67.0
scale = Vector2(2.612, 1.672)
label_settings = SubResource("LabelSettings_s7h8d")

[node name="PropulsionCount" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 56.0
offset_right = 102.0
offset_bottom = 82.0

[node name="BioticsCount" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 108.0
offset_right = 102.0
offset_bottom = 134.0

[node name="SuppressionCount" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 72.0
offset_right = 102.0
offset_bottom = 98.0

[node name="RoboticsCount" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 91.0
offset_right = 102.0
offset_bottom = 117.0

[node name="OpticsCount" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 39.0
offset_right = 102.0
offset_bottom = 65.0
